# shinsei-agent-navigator

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md
.github/: lychee.toml
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  agent_interfaces.py  evals.py  knowledge_base.py  llm_agents.py  main.py  models.py  pipeline.py  runtime.py  runtime_events.py
backend/tests/: __init__.py  test_evals.py  test_llm_workflow.py  test_openai_integration.py  test_pipeline.py
docs/: architecture.md  development-process.md  future-work.md  interfaces.md  release-checklist.md
examples/: scenarios.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat-demo.tsx
frontend/lib/: pipeline-types.ts
knowledge/business_trip/: policy.md  template.md
knowledge/common/: approval-rules.md  faq.md  workflow-policy.md
knowledge/expense/: policy.md  template.md
knowledge/purchase/: policy.md  template.md
